2010-04-25  Scott Balneaves  <sbalneav@ltsp.org>

	* cupsmodule.c: PPD order constants.
	* cupsconnection.c: Support for ppdEmit* functions.

2010-04-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Optional
	requested_attributes argument (bug #584806).

	* cupsconnection.c (Connection_getPPDs, Connection_getDevices,
	Connection_getJobs, Connection_getJobAttributes): Avoid memory
	leak when argument parsing fails.

2010-02-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_dealloc): Be more cautious when
	removing the Connection object from the list (bug #567386).

2010-01-06  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c (IPPRequest_getAttributes): Continue to next
	attribute if we can't translate a value.

2010-01-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_cancelJob): Optional second
	argument is now a keyword.

2009-12-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_init): Use more descriptive
	exception message (trac #10).

2009-12-21  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (cups_setPasswordCB2): Allow None.

2009-12-18  Jiri Popelka  <jpopelka@redhat.com>

	* cupsconnection.c (Connection.cancelJob):
	Added optional purge_job patameter.

2009-12-16  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (password_callback,
	Connection_setPasswordCB): New method.

2009-12-08  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printFile): If cupsPrintFile2()
	fails it returns zero, not -1 (trac #9).

2009-09-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDevices): Added optional timeout
	parameter.

2009-08-18  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: Define some IPP attribute tag constants.

	* cupsipp.c (IPPRequest_getAttributes): Handle IPP_TAG_ZERO
	attributes which have no attribute name.

2009-08-17  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c: New file implementing IPPRequest and IPPAttribute
	types.