@@ -21,6 +21,13 @@
 #include "cupsipp.h"
 #include "cupsmodule.h"
 
+/* Compatibility code for older (pre-2.5) versions of Python */
+#if PY_VERSION_HEX < 0x02050000
+typedef int Py_ssize_t;
+#define PY_SSIZE_T_MAX INT_MAX
+#define PY_SSIZE_T_MIN INT_MIN
+#endif
+
 //////////////////
 // IPPAttribute //
 //////////////////
