@@ -1,3 +1,8 @@
+2010-04-26  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsipp.c: Added compatibility code to allow compilation
+	with Python < 2.5 (trac #14).
+
 2010-04-25  Scott Balneaves  <sbalneav@ltsp.org>
 
 	* cupsmodule.c: PPD order constants.
